--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,66 @@
+.task-item {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px rgba(223, 210, 212, 0.922) solid;
+  font-family: "Courier New", Courier, monospace;
+  margin: auto;
+  width: 190px;
+}
 
-/* 
+.tasl-item p {
+  display: flex;
+  justify-self: start;
+}
+.task-list {
+  width: 350px;
+  padding: 5px;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.todo-container {
+  width: 350px;
+  background-color: lightgreen;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-*/
+h1 {
+  padding-top: 10px;
+  color: black;
+  font-weight: bold;
+  font-family: "Courier New", Courier, monospace;
+  opacity: 50%;
+}
+
+.deleteAll {
+  background-color: white;
+  border-radius: 5px;
+  border: 3px solid green;
+  height: 30px;
+  margin-bottom: 10px;
+}
+
+.list-delete {
+  display: focus;
+  color: red;
+  background-color: whitesmoke;
+  border: none;
+}
+
+.list-delete:hover {
+  background-color: black;
+  color: red;
+  border-radius: 5px;
+  height: 30px;
+  border: 5px solid blue;
+  border-radius: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
