--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,9 @@
 .task-item {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px rgba(223, 210, 212, 0.922) solid;
+  border-bottom: 3px black solid;
   font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
   margin: auto;
   width: 190px;
 }
@@ -17,8 +18,10 @@
 }
 
 .todo-container {
+  /* padding-top: 50px; */
+  border-radius: 30px;
   width: 350px;
-  background-color: lightgreen;
+  background-color: lightblue;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,34 +33,41 @@ h1 {
   color: black;
   font-weight: bold;
   font-family: "Courier New", Courier, monospace;
-  opacity: 50%;
 }
 
 .deleteAll {
-  background-color: white;
+  background-color: green;
   border-radius: 5px;
-  border: 3px solid green;
+  border: 3px black solid;
+  font-weight: bold;
   height: 30px;
   margin-bottom: 10px;
 }
 
+.deleteAll:hover {
+  background-color: red;
+}
+
 .list-delete {
   display: focus;
-  color: red;
-  background-color: whitesmoke;
+  color: black;
+  font-weight: bold;
+  background-color: darkgreen;
   border: none;
 }
 
 .list-delete:hover {
-  background-color: black;
-  color: red;
+  background-color: red;
+  color: black;
   border-radius: 5px;
   height: 30px;
-  border: 5px solid blue;
+  border: 2px solid black;
   border-radius: 100%;
 }
 
 body {
+  padding-top: 40px;
+  background-color: black;
   display: flex;
   flex-direction: column;
   justify-content: center;
